# combine_postfits

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_ANALYSIS.md  TESTING_REDESIGN_PLAN.md  env_combine.yml  make_plots.py  pixi.toml  plot.py  plot_utils.py  pr_body.txt  pr_description.md  pyproject.toml  stats.prof  stats2.prof  sty.yml  style_base.yml  style_eric.yml  style_jeff.yml  test_perf.py  test_perf11.py  test_perf12.py  test_perf13.py  test_perf14.py  test_perf15.py  test_perf16.py  test_perf17.py  test_perf2.py  test_perf3.py  test_perf4.py  test_perf5.py  test_perf6.py  test_perf7.py  test_perf8.py  test_perf9.py  test_polyfit.py  verify_cycles.py
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
hadelModel_m125/: build.sh  build_gof.sh  failhadel2016APV.txt  fitDiagnosticsTest.root  hadelModel.root  hadelModel_combined.root  hadelModel_combined.txt  loosepasshadel2016APV.txt  passhadel2016APV.txt  topCRfailhadel2016APV.txt  topCRloosepasshadel2016APV.txt  topCRpasshadel2016APV.txt  wlnuCRfailhadel2016APV.txt  wlnuCRloosepasshadel2016APV.txt  wlnuCRpasshadel2016APV.txt
src/combine_postfits/: _version.py  make_plots.py  plot.py  plot_cov.py  plot_postfits.py  utils.py
test/: test.py  test.sh
test/.github/workflows/: ci.yml
test/fitDiags/: fit_diag_A.root  fit_diag_B.root  fit_diag_C.root
test/styles/: style_B.yml  style_C.yml  style_tmp.yml
tests/: README.md  conftest.py  examples.sh  test.py  test.sh  test_cases.py  test_cli_exposure.py  test_issue_2_interactive.py
tests/fitDiags/: fit_diag_D.root
tests/integration/: test_cli_args.py  test_plot_api.py  test_plot_cov.py
tests/styles/: style_A.yml  style_D.yml
tests/unit/: test_blind_data.py  test_hist_helpers.py  test_root_utils.py  test_utils.py
tests/visual/: test_cli_visual.py
