# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
combine_postfits = "combine_postfits.make_plots:main"
combine_postfits_cov = "combine_postfits.plot_cov:main"

[project.urls]
Homepage = "https://github.com/andrzejnovak/combine_postfits"
Documentation = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/organization/package/issues"
Discussions = "https://github.com/organization/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"


[project]
name = "combine_postfits"
version = "0.1.0"
description = "Plotter for combine postfits"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
maintainers = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "typing_extensions",
  "typeguard",
  "rich",
  "rich-argparse-plus",
  "numpy",
  "uproot",
  "mplhep>=1.0.0",
  "hist",
  "scipy",
  "pyyaml",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-image-diff",
]
testx = [
  "pytest-xdist",
]
all = [
  "combine_postfits[test,testx]"
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default: run standard tests (excludes full-only visuals)
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-m", "not root",
]

markers = [
    "quick: Smoke test (1 visual case)",
    "standard: Handpicked visual cases",
    "root: Tests requiring native ROOT dependency",
    "visual: Visual regression tests",
]
