# contents of pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
combine_postfits = "combine_postfits.make_plots:main"
combine_postfits_cov = "combine_postfits.plot_cov:main"

[project.urls]
Homepage = "https://github.com/andrzejnovak/combine_postfits"
Documentation = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/organization/package/issues"
Discussions = "https://github.com/organization/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"


[project]
name = "combine_postfits"
dynamic = ["version"]
description = "Plotter for combine postfits"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
maintainers = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "typing_extensions",
  "typeguard",
  "rich",
  "rich-argparse-plus",
  "numpy",
  "uproot",
  "mplhep>=1.0.0",
  "hist",
  "scipy",
  "pyyaml",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-image-diff",
]
testx = [
  "pytest-xdist",
]
all = [
  "combine_postfits[test,testx,root]"
]
root = [
  "root",
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default: run standard tests (excludes full-only visuals)
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-m", "not root",
]

markers = [
    "quick: Smoke test (1 visual case)",
    "standard: Handpicked visual cases",
    "root: Tests requiring native ROOT dependency",
    "visual: Visual regression tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["**/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name (common in physics: l, r, etc.)
    "F841",   # local variable assigned but never used (common in dev)
]

[tool.ruff.lint.isort]
known-first-party = ["combine_postfits"]

[tool.ruff.lint.per-file-ignores]
"**/make_plots.py" = ["E402"]
"**/plot_cov.py" = ["E402"]
"**/plot_postfits.py" = ["E402"]
"**/_version.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/combine_postfits/_version.py"
