# contents of pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
combine_postfits = "combine_postfits.make_plots:main"
combine_postfits_cov = "combine_postfits.plot_cov:main"

[project.urls]
Homepage = "https://github.com/andrzejnovak/combine_postfits"
Documentation = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/organization/package/issues"
Discussions = "https://github.com/organization/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"


[project]
name = "combine_postfits"
dynamic = ["version"]
description = "Plotter for combine postfits"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
maintainers = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "typing_extensions",
  "typeguard",
  "rich",
  "rich-argparse-plus",
  "numpy",
  "uproot",
  "mplhep>=1.1.0",
  "hist",
  "scipy",
  "pyyaml",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-image-diff",
]
testx = [
  "pytest-xdist",
]
all = [
  "combine_postfits[test,testx,root]"
]
root = [
  "root",
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default: run standard tests (excludes full-only visuals)
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-m", "not root",
]

markers = [
    "quick: Smoke test (1 visual case)",
    "standard: Handpicked visual cases",
    "root: Tests requiring native ROOT dependency",
    "visual: Visual regression tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["**/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name (common in physics: l, r, etc.)
    "F841",   # local variable assigned but never used (common in dev)
]

[tool.ruff.lint.isort]
known-first-party = ["combine_postfits"]

[tool.ruff.lint.per-file-ignores]
"**/make_plots.py" = ["E402"]
"**/plot_cov.py" = ["E402"]
"**/plot_postfits.py" = ["E402"]
"**/_version.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/combine_postfits/_version.py"

# ── Pixi ──────────────────────────────────────────────────────────────────────

[tool.pixi.workspace]
name = "combine_postfits"
version = "0.1.0"
description = "Plotter for combine postfits"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
generate-baselines = { cmd = "./tests/examples.sh all", description = "Regenerate all visual test baselines" }
lint = { cmd = "ruff check . && ruff format --check .", description = "Check linting and formatting" }
lint-fix = { cmd = "ruff check --fix . && ruff format .", description = "Fix linting and formatting" }
pre-commit-install = { cmd = "prek install", description = "Install pre-commit hooks" }

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pip = "*"
root = ">=6.26"
ruff = "*"
prek = "*"
numpy = "*"
scipy = "*"
pyyaml = "*"
matplotlib = "*"

[tool.pixi.pypi-dependencies]
combine_postfits = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pillow = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest tests/ -m 'not root and not visual' -n auto && pytest tests/ -m 'visual and not root'", description = "Unit + integration + visual tests (default)" }
test-quick = { cmd = "pytest tests/unit/ tests/integration/ -n auto -v && pytest tests/visual/ -m quick -v", description = "Quick smoke test (~1 visual case)" }
test-root = { cmd = "pytest tests/ -m root", description = "ROOT-dependent tests only" }
test-full = { cmd = "pytest tests/ -m 'not visual' -n auto && pytest tests/ -m visual", description = "Full suite including ROOT tests" }
test-matrix = { cmd = "pytest tests/unit/ -n auto --junitxml=test-results-matrix-unit.xml && combine_postfits -i tests/fitDiags/fit_diag_A.root -o tests/matrix_out -p 2 --data --unblind && pytest tests/ -m root --junitxml=test-results-matrix-root.xml", description = "CI matrix: unit + multiprocessing + ROOT" }
test-cli = { cmd = "pytest tests/test_cli_exposure.py -v", description = "Verify CLI entry points are installed" }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { features = ["test"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
py310 = ["py310", "test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]
